# cchess

./: BUILDING.md  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: target_options.cmake
include/cchess/: bit_utils.h  board.h  board_macros.h  cchess.h  char_utils.h  magic_bitboards.h  move.h  profiling.h  random.h
scripts/: bitboards_study.py
src/: CMakeLists.txt  board.c  board_macros.c  magic_bitboards.c  main.c  move.c  random.c
tests/: CMakeLists.txt  test_board.c  test_fen.c  test_magic_bitboards.c  test_move.c  test_move_generation.c
